--- a/4page/index.html
+++ b/4page/index.html
@@ -24,7 +24,7 @@
     </div>
     <div class="message-box">
       <textarea type="text" class="message-input" placeholder="Yes"></textarea>
-      <a href="https://telegram.me/Igxvipper"><button type="submit" class="message-submit">Send</button></a>
+      <a href="https://telegram.me/Anonymous_810"><button type="submit" class="message-submit">Send</button></a>
     </div>
   
   </div>
